--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,6 +19,7 @@
   overflow: hidden;
   max-width: 85%;
   margin: 12px 0 0;
+  color: #212121;
 }
 
 .card__content {
@@ -28,6 +29,7 @@
 }
 
 .card__like-btn {
+  margin: 12px 0 0 0;
   background-image: url(../images/heart.svg);
   width: 23px;
   height: 20px;
@@ -39,11 +41,17 @@
 
 .card__like-btn:hover {
   opacity: 100%;
-  cursor: url(../images/cursor.svg), auto;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
+    width: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 1;
   }
 }
