--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 40px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .cards__list {
@@ -13,7 +15,8 @@
 }
 
 @media screen and (max-width: 627px) {
-  \ .cards__list {
+  .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px 16px;
   }
 }
