--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,7 +1,7 @@
 .footer {
-  margin: 60px auto;
-  text-align: center;
-  max-width: 1280px;
+  padding: 60px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .footer__text {
