--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -28,6 +28,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
 }
 
 .profile__description {
@@ -41,6 +42,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
 }
 
 .profile__edit-btn {
@@ -57,11 +59,13 @@
   gap: 8px;
   opacity: 0.7;
   transition: opacity 0.3s ease;
+  margin-right: auto;
+  padding: 0;
 }
 
 .profile__edit-btn:hover {
   opacity: 1;
-  cursor: url(../images/cursor.svg), auto;
+  cursor: pointer;
 }
 
 .profile__add-btn {
@@ -81,16 +85,18 @@
   align-items: center;
   align-self: flex-end;
   gap: 8px;
+  border: none;
 }
 
 .profile__add-btn:hover {
   opacity: 70%;
-  cursor: url(../images/cursor.svg), auto;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
+    max-width: 288px;
     align-items: center;
     text-align: center;
     padding-top: 20px;
@@ -104,27 +110,28 @@
 
   .profile__name {
     font-size: 20px;
-    margin-bottom: 6px;
+    margin: 0 0 6px;
     max-width: 288px;
   }
 
   .profile__description {
-    margin-bottom: 32px;
+    margin: 0 0 32px;
     font-size: 16px;
     max-width: 288px;
+    margin: auto;
   }
 
   .profile__column {
-    margin-bottom: 20px;
+    margin: 0 0 20px;
   }
 
   .profile__add-btn {
-    margin-left: 0;
+    margin: 0;
     max-width: 288px;
     width: 100%;
   }
-}
 
-.profile__edit-btn {
-  align-self: center;
+  .profile__edit-btn {
+    margin: auto;
+  }
 }
