--- a/blocks/card.css
+++ b/blocks/card.css
@@ -35,7 +35,7 @@
   height: 20px;
   border: none;
   background-color: transparent;
-  opacity: 40%;
+  opacity: 0.4;
   transition: opacity 0.3s ease;
 }
 
